--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Me</title>
+    <link href="contact.html" target="_blank">
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -12,11 +13,18 @@
         <div>
             <div>Junming Zhang</div>
             <ul>
-                <li>About</li>
-                <li>Portfolio</li>
-                <li>Phone Number: 4155038710</li>
+                <li class="row">About</li>
+                <li class="row">
+                    <a href="portfolio.html" target="_blank" class="link">Portfolio</a>
+                </li>
+                <li>
+                    <a href="contact.html" target="_blank" class="link">Contact</a>
+                </li>
             </ul>
         </div>
+        <form>
+            <input type="text" placeholder="Question?" required>ß
+        </form>
     </header>
     <section>
         <div></div>
