Section added and the Header

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header>
-        <div>
-            <div>Junming Zhang</div>
+        <div class="header-content-container">
+            <div class="name">Junming Zhang</div>
             <ul>
                 <li class="row">About</li>
                 <li class="row">
@@ -22,12 +22,11 @@
                 </li>
             </ul>
         </div>
-        <form>
-            <input type="text" placeholder="Question?" required>ß
-        </form>
     </header>
     <section>
-        <div></div>
+        <div class="header-content-container">
+            I love coding.
+        </div>
     </section>
     <footer>Copyright</footer>
 </body>
