--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </header>
     <section>
-        <div class="header-content-container">
+        <div class="content-container">
             I love coding.
         </div>
     </section>
