--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Me</title>
-    <link href="contact.html" target="_blank">
+    <!-- <link href="contact.html" target="_blank"> -->
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -13,7 +13,9 @@
         <div class="header-content-container">
             <div class="name">Junming Zhang</div>
             <ul>
-                <li class="row">About</li>
+                <li class="row">
+                    <a href="about.html" target="_blank" class="link">About</a>
+                </li>
                 <li class="row">
                     <a href="portfolio.html" target="_blank" class="link">Portfolio</a>
                 </li>
